@@ -30,6 +30,11 @@ void DisplayQt::lockAspectRatio(bool lock) {
 	update();
 }
 
+void DisplayQt::lockIntegerScaling(bool lock) {
+	Display::lockIntegerScaling(lock);
+	update();
+}
+
 void DisplayQt::filter(bool filter) {
 	Display::filter(filter);
 	update();
@@ -65,6 +70,10 @@ void DisplayQt::paintEvent(QPaintEvent*) {
 		} else if (s.width() * m_height < s.height() * m_width) {
 			ds.setHeight(s.width() * m_height / m_width);
 		}
+	}
+	if (isIntegerScalingLocked()) {
+		ds.setWidth(ds.width() - ds.width() % m_width);
+		ds.setHeight(ds.height() - ds.height() % m_height);
 	}
 	QPoint origin = QPoint((s.width() - ds.width()) / 2, (s.height() - ds.height()) / 2);
 	QRect full(origin, ds);
