@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>650</width>
-    <height>450</height>
+    <height>454</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -115,7 +115,7 @@
            <property name="editable">
             <bool>true</bool>
            </property>
-           <property name="currentText" stdset="0">
+           <property name="currentText">
             <string>1536</string>
            </property>
            <property name="currentIndex">
@@ -181,7 +181,7 @@
            <property name="editable">
             <bool>true</bool>
            </property>
-           <property name="currentText" stdset="0">
+           <property name="currentText">
             <string>44100</string>
            </property>
            <property name="currentIndex">
@@ -380,10 +380,17 @@
          </property>
         </widget>
        </item>
-       <item row="11" column="1">
+       <item row="12" column="1">
         <widget class="QCheckBox" name="resampleVideo">
          <property name="text">
           <string>Bilinear filtering</string>
+         </property>
+        </widget>
+       </item>
+       <item row="11" column="1">
+        <widget class="QCheckBox" name="lockIntegerScaling">
+         <property name="text">
+          <string>Force integer scaling</string>
          </property>
         </widget>
        </item>
