@@ -210,6 +210,7 @@ public:
 	void setSizeHint(const QSize& size);
 	virtual QSize sizeHint() const override;
 	void setLockAspectRatio(int width, int height);
+	void setLockIntegerScaling(bool lock);
 
 protected:
 	virtual void paintEvent(QPaintEvent*) override;
@@ -218,6 +219,7 @@ private:
 	QSize m_sizeHint;
 	int m_aspectWidth;
 	int m_aspectHeight;
+	bool m_lockIntegerScaling;
 };
 
 }
