@@ -15,6 +15,7 @@ Features:
  - Command line ability to override configuration values
  - Add option to allow preloading the entire ROM before running
  - GB: Video/audio channel enabling/disabling
+ - Add option to lock video to integer scaling
 Bugfixes:
  - LR35902: Fix core never exiting with certain event patterns
  - GB Timer: Improve DIV reset behavior
